# DemoSDLwithClion

./: CMakeLists.txt  main.cpp
